@@ -28,6 +28,7 @@
 #include "console.h"
 
 QString style_name;
+QSharedMemory shm("Cuberok shared memory");
 
 #define FILELOG
 //#define DEBUG
@@ -83,6 +84,113 @@ void myMessageOutput(QtMsgType type, const char *msg)
  }
 #endif
 
+void usage()
+{
+	printf("Usage:\n\
+cuberok [OPTIONS] [FILES]\n\
+\tOptions are:\n\
+--new\t-n\tCreate a new playlist\n\
+--url URL\t-u URL\tOpen given URL\n\
+--volume NN\t-v NN\tSet volume to NN percent\n\
+--next\t-n\tNext track\n\
+--prev\t-r\tPrevious track\n\
+--stop\t-s\tStop\n\
+--play\t-p\tPlay or pause current track\n\
+--help\t-h\tPrint this screen\n\
+--version\t-V\tPrint Cuberok version\n\
+\n\
+\tFILES: local files or playlists to open\n");
+}
+
+void putCommands(int argc, char *argv[])
+{
+	QStringList list;
+	bool url = false, volume = false;
+	for(int i = 1; i < argc; i++) {
+		if(!strcmp(argv[i], "-h") || !strcmp(argv[i], "--help")) {
+			usage();
+			return;
+		} else
+		if(!strcmp(argv[i], "-n") || !strcmp(argv[i], "--new")) {
+			//if(list.size() && list.back().size()) 
+			list << QString("");
+			continue;
+		} else
+		if(!strcmp(argv[i], "-u") || !strcmp(argv[i], "--url")) {
+			url = true;
+			continue;
+		} else
+		if(!strcmp(argv[i], "-v") || !strcmp(argv[i], "--volume")) {
+			volume = true;
+			continue;
+		} else
+		if(!strcmp(argv[i], "-x") || !strcmp(argv[i], "--next")) {
+			list << "#next";
+			continue;
+		} else
+		if(!strcmp(argv[i], "-r") || !strcmp(argv[i], "--prev")) {
+			list << "#prev";
+			continue;
+		} else
+		if(!strcmp(argv[i], "-s") || !strcmp(argv[i], "--stop")) {
+			list << "#stop";
+			continue;
+		} else
+		if(!strcmp(argv[i], "-p") || !strcmp(argv[i], "--play")) {
+			list << "#play";
+			continue;
+		} else
+		if(!strcmp(argv[i], "-V") || !strcmp(argv[i], "--version")) {
+			printf("%s\n", (const char*)QString("%1.%2.%3").arg(QString::number(CUBEROK_VERSION_MAJ), QString::number(CUBEROK_VERSION_MIN), QString::number(CUBEROK_VERSION_BUI)).toLocal8Bit());
+			continue;
+		} else
+		if(argv[i][0] == '-') {
+			fprintf(stderr, "Unknown option %s\n", argv[i]);
+			usage();
+			return;
+		}
+		if(url) {
+			list << argv[i];
+			url = false;
+		} if(volume) {
+			list << QString("#volume %1").arg(argv[i]);
+			volume = false;
+		} else {
+			QString file = argv[i];
+			if(QFileInfo(file).isRelative()) {
+				file = QDir::currentPath() + QDir::separator() + file;
+			}
+			list << QUrl::fromLocalFile(file).toString();
+		}
+	}
+	QByteArray bytes;
+	QDataStream stream(&bytes, QIODevice::WriteOnly);
+	stream << list;
+	if(bytes.size() >= SHMEM_SIZE) {
+		fprintf(stderr, "Arguments too long! These size is greater than %d bytes\n", SHMEM_SIZE);
+	}
+	bool success = false;
+	long long time = 0;
+	while(!success) {
+		shm.lock();
+		char *data = (char*)shm.data();
+		if(!data[0]) {
+			memcpy(data+1, bytes.data(), bytes.size());
+			data[0] = list.size() > 255 ? 255 : list.size();
+			shm.unlock();
+			success = true;
+		} else {
+			shm.unlock();
+			//msleep(100);
+			time += 1;
+		}
+		if(!success && time > 10000) {
+			fprintf(stderr, "Timeout!");
+			return;
+		}
+	}
+}
+
 int main(int argc, char *argv[])
 {
     srand(0);
@@ -96,19 +204,24 @@ int main(int argc, char *argv[])
     //QCoreApplication::setOrganizationDomain("");
     QCoreApplication::setApplicationName("Cuberok");
     MyApplication a(argc, argv);
-	QSharedMemory shm("Cuberok shared memory");
-	if(shm.attach(QSharedMemory::ReadOnly)) {
-		qDebug("Cuberok already started\n exiting...");
-		return 0;
+	if(shm.attach(QSharedMemory::ReadWrite)) {
+		if(argc == 1) {
+			qDebug("Cuberok already started\n exiting...");
+			usage();
+			return 1;
+		} else {
+			putCommands(argc, argv);
+			return 0;
+		}
 	}
-	QString splashstring = QString("Cuberok v %1.%2.%3").arg(QString::number(CUBEROK_VERSION_MAJ), QString::number(CUBEROK_VERSION_MIN), QString::number(CUBEROK_VERSION_BUI));
-	if(!shm.create(30)) {
-		qWarning("Can not create shared memory segment!");
+	if(!shm.create(SHMEM_SIZE)) {
+		qFatal("Can not create shared memory segment!");
 	} else {
 		shm.lock();
-		memcpy(shm.data(), (const char*)splashstring.toLocal8Bit(), splashstring.toLocal8Bit().size());
+		*(char*)shm.data() = 0;
 		shm.unlock();
 	}
+	QString splashstring = QString("Cuberok v %1.%2.%3").arg(QString::number(CUBEROK_VERSION_MAJ), QString::number(CUBEROK_VERSION_MIN), QString::number(CUBEROK_VERSION_BUI));
     QPixmap pixmap(":/icons/splash.png");
     QSplashScreen splash(pixmap);
     splash.show();
